# pygage

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: bods.tsv  carta_gs.tsv  egSymb.tsv  go_gs.tsv  gse16873.tsv  kegg.gs.dise  kegg_gs.tsv  kegg_gs_dise.tsv  khier.tsv  korg.tsv
lib/: __init__.py  core.py  data_processing_utils.py  gene_id_utils.py  pathway_database_utils.py  readme.md  results_analysis.py  tests.py  visualization_utils.py
lib/data/: bods.tsv  carta_gs.tsv  egSymb.tsv  go_gs.tsv  gse16873.tsv  kegg_gs.tsv  kegg_gs_dise.tsv  khier.tsv  korg.tsv
man/: readme.md
